--- a/package.json
+++ b/package.json
@@ -6,21 +6,31 @@
 	"scripts": {
 		"clean": "rimraf dist",
 		"build": "yarn clean && tsc",
-		"start": "node dist/index.js",
+		"start": "node dist/src/index.js",
 		"dev": "yarn build && cross-env NODE_ENV=development yarn start",
-		"watch": "cross-env NODE_ENV=development nodemon"
+		"watch": "cross-env NODE_ENV=development nodemon",
+		"postinstall": "typechain --target web3-v1 '**/abi/*.abi.json' --out-dir './typechain'"
 	},
 	"devDependencies": {
+		"@graphprotocol/client-cli": "^2.2.22",
+		"@typechain/web3-v1": "^6.0.2",
 		"@types/node": "^18.15.11",
 		"@types/node-fetch": "^2.6.3",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.3",
 		"nodemon": "^2.0.22",
 		"rimraf": "^5.0.0",
+		"typechain": "^8.1.1",
 		"typescript": "^5.0.4"
 	},
 	"dependencies": {
+		"@dopex-io/web3-multicall": "^0.1.9",
+		"@uniswap/sdk-core": "^3.2.2",
+		"@uniswap/v3-sdk": "^3.9.0",
+		"axios": "^1.3.6",
+		"bignumber.js": "^9.1.1",
 		"discord.js": "^14.9.0",
+		"graphql": "^16.6.0",
 		"node-fetch": "2",
 		"slash-create": "^5.11.0",
 		"slash-up": "^1.3.0",
